Fix some spacing issues

--- a/cfgov/unprocessed/css/molecules/social-media.less
+++ b/cfgov/unprocessed/css/molecules/social-media.less
@@ -85,7 +85,7 @@
     }
 
     &_print {
-        padding-left: unit( 13px / @base-font-size-px, em );
+        padding-left: unit( (@grid_gutter-width / 2) / @base-font-size-px, em );
         border-left: 1px solid @black;
     }
 
